# fluffy-lamp

./: README.md  pyproject.toml
configs/: triframe_base.yaml  triframe_large.yaml  triframe_small.yaml
examples/: quickstart.py  synthetic_training.py
scripts/: evaluate.py  generate_synthetic_data.py  predict.py  train.py
tests/: test_components.py  test_data.py  test_inference.py  test_model.py  test_training.py  test_translator.py
triframe/: __init__.py
triframe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
triframe/data/: __init__.py  collator.py  dataset.py  tokenizer.py
triframe/inference/: __init__.py  predict.py
triframe/model/: __init__.py  config.py  cross_resolution.py  frame_attention.py  frame_encoder.py  frame_translator.py  heads.py  nucleotide_encoder.py  triframe.py
triframe/training/: __init__.py  losses.py  metrics.py  scheduler.py  trainer.py
triframe/utils/: __init__.py  codon_table.py
